Bug 267413 - REGRESSION(271415@main): Paint-on captions shift slightly during playback
Summary: REGRESSION(271415@main): Paint-on captions shift slightly during playback
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-11 08:48 PST by Jer Noble
Modified: 2024-01-12 02:41 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2024-01-11 08:48:02 PST
REGRESSION(271415@main): Paint-on captions shift slightly during playback
Comment 1 Jer Noble 2024-01-11 08:48:10 PST
<rdar://problem/120847946>
Comment 2 Jer Noble 2024-01-11 09:00:25 PST
Pull request: https://github.com/WebKit/WebKit/pull/22664
Comment 3 EWS 2024-01-12 02:41:08 PST
Committed 272966@main (c2b79f5f2ba7): <https://commits.webkit.org/272966@main>

Reviewed commits have been landed. Closing PR #22664 and removing active labels.